# obamas

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/obamas/: __init__.py  obamas.py
tests/: test_obamas.py
