[tool.poetry]
name = "obamas"
version = "0.1.0"
description = "Checks if this is a year Obama won an election."
authors = ["Alan Lee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.package]
include = "obamas"
from = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
