[tool.poetry]
name = "obamas"
version = "0.1.0"
description = "Checks if this is a year Obama won an election."
authors = ["Alan Lee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[[tool.poetry.packages]]
include = "obamas"
from = "src"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
jupyter = "^1.1.1"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
